fix z-index game settings issue

--- a/components/games/GameStyles.css
+++ b/components/games/GameStyles.css
@@ -225,6 +225,7 @@
 	width: 100%;
 	height: 100%;
 	transform: rotate(-90deg);
+	z-index: 0;
 }
 
 .clock-bg {
